--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,2 +1,18 @@
 server.port:9090
 logging.level.com.example.chat=DEBUG
+
+security.oauth2.client.clientId=418642121646-5cv52vfu7t7g6e2n5ujkg7tqnqlt0s9a.apps.googleusercontent.com
+security.oauth2.client.clientSecret=yJYzlFXkraGXjWQsVmHacJFP
+security.oauth2.client.accessTokenUri=https://accounts.google.com/o/oauth2/token
+security.oauth2.client.userAuthorizationUri=https://accounts.google.com/o/oauth2/v2/auth
+security.oauth2.client.tokenName=oauth_token
+security.oauth2.client.authenticationScheme=query
+security.oauth2.client.clientAuthenticationScheme=form
+security.oauth2.client.scope=profile email
+
+security.oauth2.client.pre-established-redirect-uri=http://127.0.0.1:4200
+security.oauth2.client.registered-redirect-uri=http://127.0.0.1:4200
+security.oauth2.client.use-current-uri=false
+
+security.oauth2.resource.userInfoUri=https://www.googleapis.com/oauth2/v3/userinfo
+security.oauth2.resource.preferTokenInfo=false
